--- a/site/src/Sass/base/_base.scss
+++ b/site/src/Sass/base/_base.scss
@@ -33,6 +33,7 @@ body {
   font-family: var(--ff-primary);
   height: 100%;
   overflow-x: hidden;
+  scroll-behavior: smooth;
 }
 *::selection {
   background: var(--clr-green);
